<resources>
    <string name="app_name">SmartNoteBook</string>
    <string name="app_name_menu"> <font color="#5F6368"> SmartNoteBook </font></string>

    <!--DopMainMenu string start-->
    <string name="DopMenuEditText">Редактор текста</string>
    <string name="DopMenuTrash">Корзина</string>
    <string name="DopMenuSetting">Настройки</string>
    <string name="DopMenuAbout">Справка</string>
    <!--DopMainMenu string end-->

    <!--MainMenu string start-->
    <string name="buttonNotes">Заметки</string>
    <string name="buttonFolder">Папки</string>
    <string name="buttonAccount">Аккаунт</string>
    <string name="textViewHead">Заголовок</string>
    <string name="textViewNotes">Заметки</string>
    <string name="buttonSearch">Поиск</string>
    <string name="buttonAssistant">Помощник</string>
    <!--MainMenu string end-->

    <!--Account-->
    <!--Account-->

    <!--NotesMain string start-->
    <string name="MainStringTag">Теги: </string>
    <!--NotesMain string end-->

    <!--Account login string start-->
    <string name="Login">Login</string>
    <string name="hint_email">Почта</string>
    <string name="hint_username">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_button_login">Войти</string>
    <string name="forgotPass">Забыли пароль?</string>
    <string name="textRegister">Ещё нет аккаунта? <font color="#FF6200EE"> Register</font></string>
    <string name="checkTextEmpty"><font color="#FF0000">Не все поля заполнены!</font></string>
    <!--Account login string end-->

    <!--Account register string start-->
    <string name="Register">Register</string>
    <string name="hint_username_register">Имя пользователя (Обязательно)</string>
    <string name="hint_button_register">Регистрация</string>
    <string name="textLogin">Ужe есть аккаунт? <font color="#FF6200EE"> Login</font></string>
    <!--Account register string end-->

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <!--Setting Main start-->
    <string name="notif_setting">Уведомления и звук</string>
    <string name="language_setting">Язык</string>
    <string name="date_setting">Данные и память</string>
    <string name="main_setting">Основное</string>
    <string name="security_setting">Конфиденциальность</string>
    <string name="info_setting">О программе</string>
    <string name="bug_setting">Сообщить об ошибке</string>
    <!--Setting Main end-->

    <!--Setting Main start-->
    <string name="Data_setting">Память устройства</string>
    <string name="SizeDatabase_setting">Размер базы данных: </string>
    <string name="ClearDatabase_setting">Очистить базу данных</string>
    <!--Setting Main end-->

    <string name="SettingPref">Настройки</string>

    <!--Setting General start-->
    <string name="UsageAnimate">Анимация</string>

    <!--Setting General end-->

    <!--Setting About start-->
    <string name="RateApp">Оценить приложение</string>
    <string name="LicenseApp">Лицензионное соглашение</string>
    <string name="PrivacyPolicy_app">Политика конфиденциальности</string>
    <string name="versionApp">Текущая версия: </string>
    <!--Setting About end-->

    <!--CreateNotes start-->
    <string name="Notes">Заметка</string>
    <string name="NotesImportItem">Импорт файла</string>
    <string name="NotesAdvanceSettingNotesItem">Расширенные настройки</string>
    <string name="NotesAddImage">Добавить вложение</string>
    <string name="NoteAddTask">Добавить подзадачу</string>
    <string name="NotesNewTask">Новая подзадача</string>
    <string name="NotesAddTag">Добавить тег</string>
    <string name="DefaultTagName">Прочее</string>
    <!--CreateNotes end-->

    <!--Setting Security start-->

    <!--Setting Security end-->

    <!--Setting Security start-->

    <!--Setting Security end-->

    <!--Setting Security start-->

    <!--Setting Security end-->

    <!--Alert Dialog Notes start-->
    <string name="DialogAlert">Внимание!</string>
    <string name="DialogSaveText">Вы действительно хотите сохранить изменения?</string>
    <string name="DialogCancel">Отмена</string>
    <string name="DialogYes">Да</string>
    <string name="DialogNo">Нет</string>
    <!--Alert Dialog Notes end-->
</resources>