<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ItemNotes"
        android:enabled="true"
        android:icon="@drawable/ic_outline_event_note"
        android:title="@string/buttonNotes" />
    <item
        android:id="@+id/ItemFolders"
        android:enabled="true"
        android:icon="@drawable/main_menu_outline_folder"
        android:title="@string/buttonFolder" />
    <item
        android:id="@+id/ItemVoiceAssistant"
        android:enabled="true"
        android:icon="@drawable/ic_outline_voice_assistant"
        android:title="@string/buttonAssistant" />
    <item
        android:id="@+id/ItemAccount"
        android:enabled="true"
        android:icon="@drawable/main_menu_outline_account_circle"
        android:title="@string/buttonAccount" />
</menu>