<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:id="@+id/MainSetting"
        android:title="@string/main_setting"
        app:fragment="com.example.smartnotebook.util.SettingsFragmentGeneral"
        app:icon="@drawable/ic_outline_settings" />
    <Preference
        android:id="@+id/SecuritySetting"
        android:title="@string/security_setting"
        app:fragment="com.example.smartnotebook.util.SettingsFragmentSecurity"
        app:icon="@drawable/setting_outline_security" />
    <Preference
        android:id="@+id/InfoSetting"
        android:title="@string/info_setting"
        app:fragment="com.example.smartnotebook.util.SettingsFragmentAbout"
        app:icon="@drawable/ic_outline_info" />

</PreferenceScreen>